- Bỏ tạo PoC ở luồng 1   -Cải thiện độ chính xác khi đọc RAG ở luồng 2

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,11 @@ python-dotenv
 rich
 streamlit
 # Thư viện cho Giai đoạn 3: RAG
-langchain-community     # Chứa các công cụ để tải tài liệu, tạo CSDL vector
+
 faiss-cpu             # Công cụ tìm kiếm vector siêu nhanh của Facebook AI
-langchain-huggingface # Cung cấp model để biến chữ thành số (embedding)
+# LangChain Core Components (Requesting newer versions)
+langchain>=0.1.0
+langchain-core>=1.0.0
+langchain-community>=0.0.30
+langchain-google-genai>=1.0.0 # Request newer google genai integration
+langchain-huggingface>=0.0.3
