--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
+# Core application libraries
 langchain
 google-generativeai
 pydantic
 python-dotenv
 rich
 streamlit
-# Thư viện cho Giai đoạn 3: RAG
+requests 
+Flask
 
-faiss-cpu             # Công cụ tìm kiếm vector siêu nhanh của Facebook AI
-# LangChain Core Components (Requesting newer versions)
-langchain>=0.1.0
+# RAG libraries
+faiss-cpu
+langchain-huggingface>=0.0.3
+
+# LangChain Core Components
 langchain-core>=1.0.0
 langchain-community>=0.0.30
-langchain-google-genai>=1.0.0 # Request newer google genai integration
-langchain-huggingface>=0.0.3
+langchain-google-genai>=1.0.0
