feat: Add chat management and persistent storage
- Add delete button for conversations with auto-switch
- Implement persistent storage with JSON file
- Auto-save chat history after each message
- Add sentence-transformers to requirements
- Move Docker setup to separate docker/ folder
- Update README with clear setup instructions
- Fix ImportError for HuggingFaceEmbeddings

Features:
- Multi-conversation management
- Delete conversations (auto-switch to next chat)
- Chat history persists across page reloads
- Works with external Kali Linux machine
- Optional Docker setup in docker/ folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .env
 my_faiss_index/
+chat_history.json
 
 # Snyk Security Extension - AI Rules (auto-generated)
 .github/instructions/snyk_rules.instructions.md
