--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask
 # RAG libraries
 faiss-cpu
 langchain-huggingface>=0.0.3
+sentence-transformers
 
 # LangChain Core Components
 langchain-core>=1.0.0
