Update app logic, fix chat input bug, and add missing files

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .env
 my_faiss_index/
+chat_history.json
+uploaded_sources.json
 
 # Snyk Security Extension - AI Rules (auto-generated)
 .github/instructions/snyk_rules.instructions.md
