--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,9 @@ langchain-huggingface>=0.0.3
 langchain-core>=1.0.0
 langchain-community>=0.0.30
 langchain-google-genai>=1.0.0
+
+# Document Processing
+PyPDF2>=3.0.0
+python-docx>=1.1.0
+unstructured>=0.10.0
+beautifulsoup4>=4.12.0
